# boxupdater

./: README.md  components.json  package.json  pnpm-lock.yaml  unused_tailwind.config.js
.github/workflows/: main.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  repositories.json
src/assets/: index.css
src/components/ui/: StatusBar.vue  index.ts
src/components/ui/button/: index.ts
src/components/ui/card/: Card.vue
src/components/ui/combobox/: ComboboxAnchor.vue  ComboboxInput.vue  ComboboxList.vue  ComboboxSeparator.vue
src/components/ui/progress/: Progress.vue
src/components/ui/select/: SelectContent.vue  SelectTrigger.vue
src/components/ui/skeleton/: Skeleton.vue
src/components/ui/table/: TableBody.vue  TableFooter.vue  TableHeader.vue  TableRow.vue
src/components/ui/tabs/: TabsList.vue  TabsTrigger.vue
src/lib/: repositories.ts
src/stores/: repository.ts
